flex/flex-tests/testData/js2_highlighting/LineMarkersInLibrarySource.js2
package {


public interface <error descr="Class 'IFoo' should be defined in file 'IFoo.js2'"><error descr="More than one externally visible symbol defined in file"><lineMarker descr="Has implementations">IFoo</lineMarker></error></error> {
    function <lineMarker descr="Is implemented">foo</lineMarker>();
}

public class <error descr="Class 'Foo' should be defined in file 'Foo.js2'"><error descr="More than one externally visible symbol defined in file"><lineMarker descr="Has subclasses">Foo</lineMarker></error></error> implements IFoo {
    public function <lineMarker descr="Is overridden"><lineMarker descr="Implements method 'foo' in IFoo">foo</lineMarker></lineMarker>() {}
}

public class <error descr="Class 'FooEx' should be defined in file 'FooEx.js2'"><error descr="More than one externally visible symbol defined in file">FooEx</error></error> extends Foo {
    public override function <lineMarker descr="Overrides method 'foo' in Foo">foo</lineMarker>() {}
}

}
